[package]
name = "veresiye"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "veresiye"
path = "src/main.rs"

[dependencies]
fastmurmur3 = "0.2.0"
flate2 = "1.0.28"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
sha256 = "1.5.0"
tokio = { version = "1.42.0", features = ["full"] }

serde_json = "1.0"
memmap2 = "0.9.4"
