[package]
name = "veresiye"
version = "1.0.5"
description = "Veresiye Database"
edition = "2021"
author = ["Caner Tuzunar <tuzunarcaner@outlook.com>"]
repository = "https://github.com/tuzunar/veresiye"
readme = "README.md"
categories = ["database-implementations"]
keywords = ["database", "sstable", "WAL", "LSM_Tree"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "veresiye"
# path = "src/main.rs"

[dependencies]
fastmurmur3 = "0.2.0"
flate2 = "1.0.28"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
sha256 = "1.5.0"
tokio = { version = "1.42.0", features = ["full"] }

serde_json = "1.0"
memmap2 = "0.9.4"
